 592.	[bug]		The sig-validity-interval option now specifies a
			number of days, not seconds.  This matches the
			documentation. [RT #529]

	--- 9.1.0b1 released ---

 591.	[bug]		Work around non-reentrancy in openssl by disabling
			precomputation in keys.

 590.	[doc]		There are now man pages for the lwres library in
			doc/man/lwres.

 589.	[bug]		The server could deadlock if a zone was updated 
			while being transferred out.

 588.	[bug]		ctx->in_use was not being correctly initalised when
			when pushing a file for $INCLUDE. [RT #523]

 587.	[func]		A warning is now printed if the "allow-update"
			option allows updates based on the source IP
			address, to alert users to the fact that this
			is insecure and becoming increasingly so as
			servers capable of update forwarding are being
			deployed.

 586.	[bug]		multiple views with the same name were fatal. [RT #516]

 585.	[func]		dns_db_addrdataset() and and dns_rdataslab_merge()
			now support 'exact' additions in a similar manner to
			dns_db_subtractrdataset() and dns_rdataslab_subtract().

 584.	[func]		You can now say 'notify explicit'; to suppress
			notification of the servers listed in NS records
			and notify only those servers listed in the
			'also-notify' option.

 583.	[func]		"rndc querylog" will now toggle logging of
			queries, like "ndc querylog" in BIND 8.

 582.	[bug]		dns_zone_idetach() failed to lock the zone.
			[RT #199, #463]

 581.	[bug]		log severity was not being correctly processed.
			[RT #485]

 580.	[func]		Ignore trailing garbage on incoming DNS packets,
			for interoperability with broken server
			implementations. [RT #491]

 579.	[bug]		nsupdate did not take a filename to read update from.
			[RT #492]

 578.	[func]		New config option "notify-source", to specify the
			source address for notify messages.

 577.	[func]		Log illegal RDATA combinations. e.g. multiple
			singlton types, cname and other data.

 576.	[doc]		isc_log_create() description did not match reality.
